--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 
 
   <section id='about'>
-    <h1 class='content-header'>About Me</h1>
+    <h2 class='content-header'>About Me</h2>
     <div class='about-container'>
 
-      <p class=' animation-element slide-left'>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music (SoundCloud link below), art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration
-        technician at a local, well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
+      <p class=' animation-element slide-left'>Hi, I'm Sean, a web-developer based in the Chattanooga area. I'm a lover of music, art, and nature and I like to employ elements and concepts of these interests into my work. I spend my free time learning more about web development, 3D printing,
+        producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
 
 
       <div id='specialty' class='specialty'>
@@ -73,7 +73,7 @@
 
 
   <section id='projects'>
-    <h1 class='content-header'>My Projects</h1>
+    <h2 class='content-header'>My Projects</h2>
     <div class='projects-container'>
       <div class='item animation-element slide-left'>
         <a href="https://codepen.io/Khottavong/pen/gvLpXx?editors=1111"><img class='pxl-art-img' src="pxl-art.png" alt="pixel art image">
@@ -101,16 +101,20 @@
 
 
   <section id='contact'>
-    <h1 class='content-header'>Contact</h1>
-    <h1>If you like what you see, <br> let's get in touch.</h1>
-    <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
-      <div class='input-container'>
+    <h2 class='content-header'>Contact</h2>
+    <div class='contact-container'>
+      <p>If you like what you see, let's get in touch.</p>
+      <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
+
         <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="userEmail" placeholder="Email" required>
-      </div>
-      <textarea class='form-text' name="user_message" placeholder="Message"></textarea>
-      <input id='contactsubmit' type="submit">
-    </form>
+
+        <textarea class='form-text' name="user_message" placeholder="Message"></textarea>
+        <input id='contactsubmit' type="submit">
+      </form>
+    </div>
+
+
   </section>
 
 
