--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
     <h2 class='content-header'>About Me</h2>
     <div class='about-container'>
 
-      <p class=' animation-element slide-left'>Hi, I'm Sean, a web-developer based in the Chattanooga area. I'm a lover of music, art, and nature and I like to employ elements and concepts of these interests into my work. I spend my free time learning more about web development, 3D printing,
-        producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
+      <p class=' animation-element slide-left'>Hi, I'm Sean, a web designer and developer based in the Chattanooga area. I build clean, functional websites for small businesses In my free time I enjoy 3D printing, music production, hiking, and kayaking. </p>
 
 
       <div id='specialty' class='specialty'>
