--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <h2 class='content-header'>About Me</h2>
     <div class='about-container'>
 
-      <p class=' animation-element slide-left'>Hi, I'm Sean, a web designer and developer based in the Chattanooga area. I build clean, functional websites for small businesses from the ground up, allowing me to customize every detail to your specific needs. When I'm not building websites, I
-        spend my free time enjoying 3D printing, music production, hiking, and kayaking. </p>
+      <p class=' animation-element slide-left'>Hi, I'm Sean, a web designer and developer based in the Chattanooga area. I build clean, functional websites for small businesses from the ground up, allowing me to customize every detail for the clients' specific needs. When I'm not building websites,
+        I spend my free time enjoying 3D printing, music production, hiking, and kayaking. </p>
 
 
       <div id='specialty' class='specialty'>
