--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h2 class='content-header'>My Projects</h2>
     <div class='projects-container'>
       <div class='item animation-element slide-left'>
-        <a href="https://codepen.io/Khottavong/pen/gvLpXx?editors=1111"><img class='pxl-art-img' src="pxl-art.png" alt="pixel art image">
+        <a href="https://codepen.io/Khottavong/pen/gvLpXx?editors=1111"><img class='pxl-art-img' src="pixel-art.png" alt="pixel art image">
       </div></a>
         <div class='item-description animation-element slide-left'>
           <h3>Pixel Art Maker</h3>
