--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 
   <header id='home'>
-    <div class="hamburger" onclick="myFunction(this)">
+    <div class="hamburger">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
     </div>
-    <div class='burger-nav'>
+    <div class="burger-nav">
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
