--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="userEmail" placeholder="Email" required>
 
-        <textarea class='form-text' name="user_message" placeholder="Message"></textarea>
+        <textarea class='form-text' name="user_message" placeholder="Message" required></textarea>
         <input id='contactsubmit' type="submit">
       </form>
     </div>
