--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Khottavong | Portfolio</title>
+  <link rel="stylesheet" href="moxymockupfonts/demo.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href="css/fontawesome-all.css" rel="stylesheet">
 
@@ -15,14 +16,6 @@
 </head>
 
 <body>
-
-
-
-
-
-
-
-
   <header id='home'>
     <div class="hamburger">
       <div class="bar1"></div>
@@ -36,7 +29,7 @@
       <a href="#contact">Contact</a>
     </div>
     <nav>
-      <a href="#home">Home</a>
+      <a class='active' href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
