update hexa link

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
     <div class='name-box'>
       <h1>Sean Khottavong</h1>
       <h2>Web Developer</h2></div>
-    <!-- <a href="">
-      <div class='download-resume'>Download Resume</div>
-    </a> -->
+
     <div class='vid-container'>
       <video src="ocoee.mp4" autoplay loop muted>
 
@@ -93,7 +91,7 @@
           <p>This is a site that I'm helping build for a friend's design startup.</p>
         </div>
         <div class='item animation-element slide-right'>
-          <a href="https://hexads.netlify.com"><img class='hexa-site.jpg' src="hexa-site.png" alt="hexa site image"></a>
+          <a href="http://hexadesignstudio.netlify.com/"><img class='hexa-site.jpg' src="hexa-site.png" alt="hexa site image"></a>
         </div>
 
       </div>
